--- a/index.html
+++ b/index.html
@@ -204,6 +204,15 @@
   <!-- ÜBER MICH -->
   <section class="container">
     <h2>Über mich</h2>
+
+    <img src="helmut-roemer-portrait.jpg"
+         alt="Porträt"
+         style="
+           max-width:180px;
+           border-radius:50%;
+           margin:24px 0;
+         ">
+
     <p>
       Ich arbeite seit vielen Jahren an der Schnittstelle von Fachbereichen, Prozessen und IT – vor allem dort,
       wo Verantwortung, Stabilität und Nachvollziehbarkeit entscheidend sind.
